# paseto_common

./: Cargo.toml
src/: README.md  error.rs  footer.rs  header.rs  implicit_assertion.rs  lib.rs  traits.rs
src/keys/: key.rs  mod.rs
src/purpose/: local.rs  mod.rs  public.rs  purpose_trait.rs
src/version/: legacy_trait.rs  mod.rs  modern_trait.rs  nist_trait.rs  sodium_trait.rs  v1.rs  v2.rs  v3.rs  v4.rs  version_trait.rs
