[package]
name = "paseto_common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Common types for PASETO protocol versions, purposes and key types. Used by the rusty_paseto and paserk crates."
homepage = "https://github.com/rrrodzilla/paseto_common"
repository = "https://github.com/rrrodzilla/paseto_common"
authors = ["Roland Rodriguez <rrrodzilla@protonmail.com>"]
keywords = ["paseto", "paserk", "security", "cryptography", "authentication"]
categories = [
  "encoding",
  "web-programming",
  "parsing",
  "cryptography",
  "authentication",
]

[dependencies]
hex = { version = "^0.4.3", optional = false }
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }
thiserror = "1.0.29"
ring = { version = "^0.16", features = ["std"], optional = false }
