[package]
name = "paseto_common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Common types for PASETO protocol versions, purposes and key types. Used by the rusty_paseto and paserk crates."
homepage = "https://github.com/rrrodzilla/paseto_common"
repository = "https://github.com/rrrodzilla/paseto_common"
authors = ["Roland Rodriguez <rrrodzilla@protonmail.com>"]
keywords = ["paseto", "paserk", "security", "cryptography", "authentication"]
categories = [
  "encoding",
  "web-programming",
  "parsing",
  "cryptography",
  "authentication",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
v1 = []
v2 = []
v3 = []
v4 = []
public = []
local = []
v1_local = ["v1", "local"]
v2_local = ["v2", "local"]
v3_local = ["v3", "local"]
v4_local = ["v4", "local"]
v1_public = ["v1", "public"]
v2_public = ["v2", "public"]
v3_public = ["v3", "public"]
v4_public = ["v4", "public"]
default = ["v3_public", "v3_local", "v4_local", "v4_public"]

[dependencies]
hex = { version = "^0.4.3", optional = false }
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }
thiserror = "1.0.29"
ring = { version = "^0.16", features = ["std"], optional = false }
