[package]
name = "paseto_common"
version = "1.0.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Common types for PASETO protocol versions, and purposes. Used by the rusty_paseto family of crates."
homepage = "https://github.com/rrrodzilla/paseto_common"
repository = "https://github.com/rrrodzilla/paseto_common"
authors = ["Roland Rodriguez <roland@govcraft.ai>"]
keywords = ["paseto", "paserk", "security", "cryptography", "authentication"]
categories = [
    "encoding",
    "web-programming",
    "parsing",
    "cryptography",
    "authentication",
]
readme = "README.md"